# NYU_RAD

./: CMakeLists.txt  README.md  linux_flash.sh  win_flash.bat
include/: ttype.h  wiring.h
src/screen/: main.cpp
